# FSS-KRE

./: .gitignore  README.md  benchmark-results.py  config.sh  measure_binary.sh
backUp/: rop.rs
backUp/examples/: max_client.rs  max_server.rs
benchmark/: README.md  mpspdz.py  offlineTime_graph.py  offlineVolume_graph.py  online_kre.py  online_kre_30bits.py  online_kre_50000.py  online_max.py  online_max_15bits.py  online_max_30bits.py  online_max_50000.py  plot.py  plot2.py
data/: README.md
frontend/: Cargo.toml
frontend/src/: main.rs
libfss/: Cargo.toml
libfss/src/: beavertuple.rs  binary.rs  condEval.rs  config.rs  dcf.rs  dpf.rs  ic.rs  idpf.rs  lib.rs  mbeaver.rs  prg.rs  qmatrix.rs  ring.rs
libidpf/src/: beavertuple.rs  dpf.rs  lib.rs  prg.rs  ring.rs  test.rs
libmpc/: Cargo.toml
libmpc/src/: channelmessage.rs  lib.rs  mpc_party.rs  mpc_platform.rs  offline_data.rs
libmpc/src/offline_data/: offline_batch_kre.rs  offline_batch_max.rs  offline_bitwise_kre.rs  offline_bitwise_max.rs  offline_ic_max.rs
libmpc/src/protocols/: batch_kre_proto.rs  batch_max_proto.rs  bitwise_kre.rs  bitwise_max.rs  max_ic_proto.rs  mod.rs  old_bitwise_max.rs
max/: Cargo.toml
max/examples/: aysnc_join.rs  max_client.rs  max_server.rs  mpc_client.rs  mpc_server.rs  rop.rs
max/src/: main.rs
offline/: Cargo.toml
offline/src/: main.rs
simulateNetwork/: clear.sh  create.sh
test/: README.md
