[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
tokio = { version = "1.29", features = ["full"] }
fss = { path = "./../libfss"}
libmpc = {path = "./../libmpc"}
bincode = { version = "1.3"}
lazy_static = "1.4.0"
itertools = "0.10"