[package]
name = "idpf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.0"
ctr = "0.9.0"
rand = "0.7.3"
rand_core = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
num = "0.2.1"
primal = "0.2.3"
lazy_static = "1.4"
num-bigint = { version = "0.3", features = ["rand", "serde"] }