[package]
name = "libmpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
tokio = { version = "1.29", features = ["full"] }
fss = { path = "./../libfss"}
bincode = { version = "1.3"}
lazy_static = "1.4.0"
#async-trait = "0.1"
#duplicate = "1.0.0"